# django-oscar-poetry-fly

./: Dockerfile  db.sqlite3  fly.toml  manage.py  package-lock.json  pyproject.toml  startup.sh
djospofly_01/: asgi.py  settings.py  urls.py  wsgi.py
djospofly_01/spa/: apps.py
djospofly_01/static/frontend/: bundle.js  bundle.js.map
djospofly_01/staticfiles/: staticfiles.json
djospofly_01/staticfiles/frontend/: bundle.2a719e42179a.js  bundle.5f29dd173cfa.js  bundle.js  bundle.js.cb16daafd227.map  bundle.js.map
frontend/: package-lock.json  package.json  rollup.config.js
frontend/src/: App.svelte
